[gd_scene load_steps=4 format=3 uid="uid://b73ytthxgs6uc"]

[ext_resource type="Script" path="res://menu.gd" id="1_ggjis"]
[ext_resource type="Theme" uid="uid://cl8t1kumn62qd" path="res://theme.tres" id="2_aggjt"]
[ext_resource type="FontFile" uid="uid://dcjsvuin75an1" path="res://assets/ethnocentric rg.otf" id="3_5lqsp"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ggjis")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="Menu/MarginContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_aggjt")
theme_override_fonts/font = ExtResource("3_5lqsp")
theme_override_font_sizes/font_size = 25
text = "AstroFreight!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_aggjt")
theme_override_fonts/font = ExtResource("3_5lqsp")
theme_override_font_sizes/font_size = 25
text = " Controls:"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Label2" type="Label" parent="Menu/MarginContainer/Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_aggjt")
text = "- Movement: Arrow keys, WASD
- Interact: Spacebar, F or Enter
- Menu: Esc
"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_aggjt")
theme_override_fonts/font = ExtResource("3_5lqsp")
theme_override_font_sizes/font_size = 25
text = " Objective:"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Label5" type="Label" parent="Menu/MarginContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_aggjt")
text = "- Complete deliveries by transporting cargo from the central station to nearby stations. (Follow the on-screen arrows.)
- Avoid obstacles and return to the central station for new assignments."
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer3" type="MarginContainer" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CloseMenuButton" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme = ExtResource("2_aggjt")
text = "Close menu"

[node name="MarginContainer4" type="MarginContainer" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ToggleMusicButton" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer4"]
layout_mode = 2
theme = ExtResource("2_aggjt")
text = "toggle music"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RespawnButton" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_aggjt")
text = "Respawn"

[node name="MarginContainer2" type="MarginContainer" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="QuitButton" type="Button" parent="Menu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_aggjt")
text = "Quit"

[node name="Label5" type="Label" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_aggjt")
theme_override_fonts/font = ExtResource("3_5lqsp")
theme_override_font_sizes/font_size = 25
text = " Created by:"
metadata/_edit_use_anchors_ = true

[node name="MarginContainer3" type="MarginContainer" parent="Menu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Label5" type="Label" parent="Menu/MarginContainer/Panel/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme = ExtResource("2_aggjt")
text = "Gergely (Remus) Szeplaki
twitter.com/szeplakig91
ldjam.com/users/remus/"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true
